# NovaFit

./: .gitattributes  .gitignore  BUILD_WINDOWS_STANDALONE.bat  LICENSE  README.md  README_ES.md  README_HE.md  REPAIR_AND_VERIFY.bat  RUN_ULTIMATE.bat  VERIFY_ALL.bat  bootstrap_windows.bat  check_novafit.ps1  config.example.json  demo.py  export_analytics_gallery.bat  export_backup.bat  export_report.bat  launch_novafit.py  launch_novafit_cli.py  novafit.py  open_data_folder.bat  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  run_cli.bat  run_gui.bat  run_novafit.bat  setup.bat  setup_windows.bat  test_theme.py  test_weather.py  verify_windows.bat
assets/: manifest.json  novafit-report-preview.html
data/: config.json  emergency_export.json  novafit_export.csv
docs/: ACCESSIBILITY.md  ANALYTICS.md  ARCHITECTURE.md  CHANGELOG.md  CLI_REFERENCE.md  CLI_REFERENCE_ULTIMATE.md  DATA_MODEL.md  DESIGN_SYSTEM.md  DISTRIBUTION_SAFETY.md  GUI_GUIDE.md  I18N_RTL.md  MOTIVATION_CENTER.md  MULTI_PROFILE.md  PAGES_AND_RELEASES.md  PROJECT_FACTS.md  RELEASE_CHECKLIST.md  RESTORATION_NOTES.md  SECURITY.md  SPORT_DATA_RECOMMENDATIONS.md  TESTING.md  THEMES.md  TROUBLESHOOTING.md  ULTIMATE_GUI.md  WINDOWS_GUIDE.md  WINDOWS_RECOVERY.md
novafit/: __init__.py  __main__.py  analytics.py  backup.py  charts.py  cli.py  config.py  dashboard_panel.py  database.py  export.py  gui.py  i18n.py  icon_factory.py  io_utils.py  logging_config.py  models.py  motivation.py  motivation_panel.py  profile_panel.py  recommendations.py  recommendations_panel.py  themes.py  (+6 more)
(+57 files in other folders)
