[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novafit-health-tracker"
version = "4.1.0"
description = "Local-first Python, Tkinter, and SQLite wellness tracker with twelve themes, local user profiles, English/Spanish/Hebrew UI, a Motivation Center, Sport & Data Coach, four analytics studios, CLI, backups, and optional weather."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [{ name = "Kevin Cusnir" }]
keywords = ["wellness", "sqlite", "tkinter", "cli", "python", "multilingual", "analytics", "portfolio"]
dependencies = [
  "requests>=2.32.0,<3.0.0",
  "Faker>=30.0.0,<40.0.0",
  "matplotlib>=3.10.0,<4.0.0",
  "Pillow>=11.0.0,<13.0.0",
  "tzdata>=2025.2",
]
[project.scripts]
novafit = "novafit.cli:main"
novafit-gui = "novafit.gui:run_gui"

[tool.setuptools]
packages = ["novafit"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 110
target-version = "py310"
